@@ -1,3 +1,7 @@
+2014-03-15  Steve Ellcey  <sellcey@mips.com>
+
+	* baseboards/multi-sim.exp (rpath_flags): Add libatomic.so check.
+
 2014-02-23  Steve Ellcey  <sellcey@mips.com>
 	    Richard Sandiford  <rdsandiford@googlemail.com>
 
